
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/reg_text"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="98dp"

        android:gravity="center"
        android:text="@string/reg_textview"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/user_reg"
        android:layout_width="200dp"
        android:layout_height="30dp"

        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"

        android:background="@color/white"
        android:drawableStart="@drawable/ic_add_user_symbol_of_interface_svgrepo_com"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_pwd"
        android:layout_width="200dp"
        android:layout_height="30dp"

        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"

        android:background="@color/white"
        android:ems="10"
        android:drawableStart="@drawable/ic_key_password_interface_symbol_rotated_to_left_svgrepo_com"
        android:hint="@string/Password"
        android:inputType="textPassword" />



    <EditText
        android:id="@+id/email_reg"
        android:layout_width="200dp"
        android:layout_height="30dp"

        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"

        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_iconmonstr_email_2"
        android:inputType="textEmailAddress"  />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="200dp"
        android:layout_height="30dp"


        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="84dp"

        android:background="@color/white"
        android:ems="10"
        android:hint="@string/phone"
        android:drawableStart="@drawable/ic_00c321310313c9808dd42972ea9ba824"
        android:inputType="phone"/>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"

        android:layout_marginTop="50dp"
        android:layout_marginStart="150dp"
        android:onClick="onClickRegister"
        android:background="@color/grey"
        android:text="@string/register" />
</LinearLayout>
