<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".Acivity_Role">

    <TextView
        android:id="@+id/role"
        android:layout_width="248dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="422dp"
        android:gravity="center"
        android:text="@string/choose_your_role"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_manager"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="294dp"
        android:text="@string/manager"
        android:onClick="onClickManager"
        android:background="@color/grey"/>

    <Button
        android:id="@+id/button_cashier"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="145dp"
        android:onClick="onClickCashier"
        android:text="@string/cashier"

        android:background="@color/grey"/>
</RelativeLayout>